display search list

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,6 +39,21 @@
         <input type="text" class="form-control" placeholder="Search" name="query">
 
     </form>
+    <!-- list of restaurants -->
+    <% if (typeof list !== 'undefined') { %>
+      <% for (var i = 0; i < list.length; i++) { %>
+        <a href="/product/<%= list[i].skuId %>">
+
+          <ul style="list-style: none;">
+            <li> <img src= <%= list[i].summary.media.primaryImage.url %> height="200" width="200"> </li>
+            <li><%= list[i].summary.names.short %></li>
+            <li><%= list[i].skuId %></li>
+          </ul>
+
+        </a>
+      <% } %>
+    <% } %>
+
 
 
 
