--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,15 +39,15 @@
         <input type="text" class="form-control" placeholder="Search" name="query">
 
     </form>
-    <!-- list of restaurants -->
-    <% if (typeof list !== 'undefined') { %>
-      <% for (var i = 0; i < list.length; i++) { %>
-        <a href="/product/<%= list[i].skuId %>">
+    <!-- list of products -->
+    <% if (typeof productList !== 'undefined') { %>
+      <% for (var i = 0; i < productList.length; i++) { %>
+        <a href="/product/<%= productList[i].skuId %>">
 
           <ul style="list-style: none;">
-            <li> <img src= <%= list[i].summary.media.primaryImage.url %> height="200" width="200"> </li>
-            <li><%= list[i].summary.names.short %></li>
-            <li><%= list[i].skuId %></li>
+            <li> <img src= <%= productList[i].summary.media.primaryImage.url %> height="200" width="200"> </li>
+            <li><%= productList[i].summary.names.short %></li>
+            <li><%= productList[i].skuId %></li>
           </ul>
 
         </a>
