css styling to main page

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,14 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
 
-a {
-  color: #00B7FF;
+.asdf {
+    display: block;
+}
+.center {
+    text-align: center;
+}
+.header-cont {
+    width:100%;
+    position: absolute;
+    top:0px;
+    background: blue;
+    height: 64px;
 }
