--- a/views/ProductInfo.ejs
+++ b/views/ProductInfo.ejs
@@ -41,9 +41,7 @@
     <% if (typeof product !== 'undefined') { %>
 
           <ul style="list-style: none;">
-            <li> <img src= <%= product.media.primaryImage.url %> height="200" width="200"> </li>
-            <li><%= product.names.short %></li>
-            <li><%= product.priceBlock.itemPrice.currentPrice %></li>
+            <li class="center"> <img src= <%= product.media.primaryImage.url %> height="200" width="200"><%= product.names.short + " " + product.priceBlock.itemPrice.currentPrice %> </li>
           </ul>
 
     <% } %>
