--- a/views/ProductInfo.ejs
+++ b/views/ProductInfo.ejs
@@ -41,7 +41,10 @@
     <% if (typeof product !== 'undefined') { %>
 
           <ul style="list-style: none;">
-            <li class="center"> <img src= <%= product.media.primaryImage.url %> height="200" width="200"><%= product.names.short + " " + product.priceBlock.itemPrice.currentPrice %> </li>
+            <li class = "center"> <img src= <%= product.media.primaryImage.url %> height="200" width="200">
+                <span class = "asdf"><%= product.names.short + " " + product.priceBlock.itemPrice.currentPrice %>
+                </span>
+            </li>
           </ul>
 
     <% } %>
