--- a/views/index.ejs
+++ b/views/index.ejs
@@ -55,7 +55,9 @@
         <a href="/product/<%= productList[i].skuId %>">
 
           <ul class="list-group list-group-flush" style="list-style: none;">
-            <li class="center"> <img src= <%= productList[i].summary.media.primaryImage.url %> height="200" width="200"><span class="asdf"><%= productList[i].summary.names.short + " " + productList[i].skuId  %> </span></li>
+            <li class="center"> <img src= <%= productList[i].summary.media.primaryImage.url %> height="200" width="200">
+                <span class="asdf"><%= productList[i].summary.names.short + " " + productList[i].skuId  %> </span>
+            </li>
           </ul>
 
         </a>
