added price engine functionality

--- a/views/ProductInfo.ejs
+++ b/views/ProductInfo.ejs
@@ -45,6 +45,9 @@
         <span class = "asdf"><%= title + " " + bbPrice %>
         </span>
         <p><%= !isNaN(azPrice) ? azPrice : 'Not on Amazon' %></p>
+        <p><%= pricePoints[0] %></p>
+        <p><%= pricePoints[1] %></p>
+        <p><%= pricePoints[2] %></p>
       </li>
     </ul>
 
