--- a/views/ProductInfo.ejs
+++ b/views/ProductInfo.ejs
@@ -55,10 +55,12 @@
         <span class = "asdf"><%= title + " " + bbPrice %>
         </span>
         <p>Amazon Price : <%= !isNaN(azPrice) ? azPrice : 'Not on Amazon' %></p>
-        <p>Price point 1 : <%= pricePoints[0] %></p>
-        <p>Price point 2 : <%= pricePoints[1] %></p>
-        <p>Price point 3 : <%= pricePoints[2] %></p>
-        <p> The Difference between Amazon Price and Best Buy Price <%= pricePoints[3] %> </p>
+        <% if (!isNaN(azPrice)) { %>
+          <p>Price point 1 : <%= pricePoints[0] %></p>
+          <p>Price point 2 : <%= pricePoints[1] %></p>
+          <p>Price point 3 : <%= pricePoints[2] %></p>
+          <p> The Difference between Amazon Price and Best Buy Price <%= pricePoints[3] %> </p>
+        <% } %>
       </li>
     </ul>
 
