--- a/views/ProductInfo.ejs
+++ b/views/ProductInfo.ejs
@@ -29,6 +29,7 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+    <script type="text/javascript" src = "../public/js/productAlgo.js"></script>
 </head>
 
 <body>
