made logo link and made some style changes

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -18,6 +18,10 @@
     width:100%;
     position: absolute;
     top:0px;
-    background: blue;
+    background: #003b64;
     height: 64px;
+}
+.link-styles{
+    color: white;
+    font-size: 20px;
 }
