--- a/views/ProductInfo.ejs
+++ b/views/ProductInfo.ejs
@@ -34,7 +34,7 @@
 
 <body>
     <div class="header-cont">
-    <h2 style="color: white" align = "center">BBPriceOptimizer</p>
+    <h2 style="color: white" align = "center"><a href = "/search" style = "color: white">BBPriceOptimizer</a></p>
     </div>
 
     <div class = "container-fluid">
