--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,7 +34,7 @@
 
 <body>
     <div class="header-cont">
-        <h2 style="color: white" align = "center">BBPriceOptimizer</p>
+        <h2 style="color: white" align = "center"><a href = "/search" style = "color: white">BBPriceOptimizer</a></p>
     </div>
     <div class = "container-fluid">
 
@@ -42,8 +42,7 @@
     <!-- Search box -->
 
     <form action="/search" style = "margin-bottom : 50px;">
-        <input type="text" class="form-control" placeholder="Search" name="query">
-
+        <input type="text" class="form-control" placeholder="Search" name="query" style = "height : 75px;">
     </form>
 
     <!-- list of products -->
