--- a/views/ProductInfo.ejs
+++ b/views/ProductInfo.ejs
@@ -53,7 +53,7 @@
 
     <ul style="list-style: none;">
       <li class = "center"> <img src=<%= image %> height="200" width="200">
-        <span class = "asdf"><%= " $" + bbPrice %>
+        <span class = "asdf"><%= " Best Buy Price : $" + bbPrice %>
         </span>
         <% if (!isNaN(azPrice)) { %>
           <p> The Difference between Amazon Price and Best Buy Price $<%= pricePoints[3] %> </p>
