--- a/views/ProductInfo.ejs
+++ b/views/ProductInfo.ejs
@@ -67,13 +67,76 @@
       </li>
     </ul>
 
+    <select>
+      <option value="" disabled selected></option>
+      <option id="city_1"></option>
+      <option id="city_2"></option>
+    </select>
+
+    <canvas id="myChart" width="400" height="400"></canvas>
+
     <!-- jQuery Version 1.11.1 -->
-    <script src="js/jquery.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
 
 </div>
+<script>
+jQuery.noConflict();
+(function($) {
+  $(function() {
+    $.getJSON('/data/cityData.json', function(json) {
+      var city_1 = json.cityData[0];
+      var city_2 = json.cityData[1];
+      console.log(json.cityData[0]);
+      $('#city_1').val(city_1.cityName);
+      $('#city_1').text(city_1.cityName);
+      $('#city_2').val(city_2.cityName);
+      $('#city_2').text(city_2.cityName);
+
+      var ctx = $("#myChart");
+      var chart = new Chart(ctx, {
+        type: 'bar',
+        data: {
+          labels: ["Red", "Blue", "Yellow", "Green", "Purple", "Orange"],
+          datasets: [{
+            label: '# of Votes',
+            data: [12, 19, 3, 5, 2, 3],
+            backgroundColor: [
+              'rgba(255, 99, 132, 0.2)',
+              'rgba(54, 162, 235, 0.2)',
+              'rgba(255, 206, 86, 0.2)',
+              'rgba(75, 192, 192, 0.2)',
+              'rgba(153, 102, 255, 0.2)',
+              'rgba(255, 159, 64, 0.2)'
+            ],
+            borderColor: [
+              'rgba(255,99,132,1)',
+              'rgba(54, 162, 235, 1)',
+              'rgba(255, 206, 86, 1)',
+              'rgba(75, 192, 192, 1)',
+              'rgba(153, 102, 255, 1)',
+              'rgba(255, 159, 64, 1)'
+            ],
+            borderWidth: 1
+          }]
+        },
+        options: {
+          scales: {
+            yAxes: [{
+              ticks: {
+                beginAtZero:true
+              }
+            }]
+          }
+        }
+      });
+    });
+  });
+})(jQuery);
+</script>
 
 </body>
 
