--- a/views/ProductInfo.ejs
+++ b/views/ProductInfo.ejs
@@ -10,10 +10,24 @@
     <meta name="author" content="">
 
     <title>BBC</title>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <style>
+    .carousel-inner > .item > img,
+    .carousel-inner > .item > a > img {
+        width: 350px;
+        height: 350px;
+        margin: auto;
+    }
+    .carousel-control.left, .carousel-control.right {
+    background-image: none
+    }
+    </style>
     <!-- Bootstrap Core CSS -->
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../stylesheets/style.css">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/full-slider.css" rel="stylesheet">
+    <link rel="stylesheet" href="/stylesheets/style.css">
 
     <!-- Custom CSS -->
     <style>
@@ -49,23 +63,68 @@
 
     <!-- clicked product -->
 
-    <h4><%= title %></h4>
 
-    <ul style="list-style: none;">
-      <li class = "center"> <img src=<%= image %> height="200" width="200">
-        <span class = "asdf"><%= " Best Buy Price : $" + bbPrice %>
-        </span>
-        <% if (!isNaN(azPrice)) { %>
-          <p> The Difference between Amazon Price and Best Buy Price $<%= pricePoints[3] %> </p>
-        <% } %>
-        <p>Amazon Price: <%= !isNaN(azPrice) ? "$" + azPrice : 'Not on Amazon' %></p>
-        <% if (!isNaN(azPrice)) { %>
-          <p>Price point 1 : $<%= pricePoints[0] %></p>
-          <p>Price point 2 : $<%= pricePoints[1] %></p>
-          <p>Price point 3 : $<%= pricePoints[2] %></p>
-        <% } %>
-      </li>
-    </ul>
+    <div class="container">
+      <h4 align="center"><%= title %></h4>
+    <div class="row">
+  <br>
+  <div class="col-md-1"></div>
+  <div class="col-md-5">
+  <div id="myCarousel" class="carousel slide" data-ride="carousel" style="width:400px; height:350px;" >
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <% for(var i = 1; i < images.length; i++) { %>
+        <li data-target="#myCarousel" data-slide-to=<%= i %>></li>
+      <% } %>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+      <div class="item active">
+        <img src=<%= images[0].url %> width="460" height="460">
+      </div>
+      <% for(var i = 1; i < images.length; i++) { %>
+        <div class="item">
+          <img src=<%= images[i].url %> width="460" height="460">
+        </div>
+      <% } %>
+    </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+  <br>
+</div>
+<br>
+
+  <div class="col-md-6">
+    <br>
+    <br>
+    <br>
+    <p><%= " Best Buy Price : $" + bbPrice %>
+    </p>
+    <% if (!isNaN(azPrice)) { %>
+      <p> The Difference between Amazon Price and Best Buy Price : $<%= pricePoints[3] %> </p>
+    <% } %>
+    <p>Amazon Price : <%= !isNaN(azPrice) ? "$" + azPrice : 'Not on Amazon' %></p>
+    <% if (!isNaN(azPrice)) { %>
+      <p>Price point 1 : $<%= pricePoints[0] %></p>
+      <p>Price point 2 : $<%= pricePoints[1] %></p>
+      <p>Price point 3 : $<%= pricePoints[2] %></p>
+    <% } %>
+  </div>
+
+</div>
+</div>
+
 
     <select>
       <option value="" disabled selected></option>
@@ -76,11 +135,11 @@
     <canvas id="myChart" width="400" height="400"></canvas>
 
     <!-- jQuery Version 1.11.1 -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+    <!-- <script src="/js/bootstrap.min.js"></script> -->
 
 </div>
 <script>
@@ -137,7 +196,11 @@ jQuery.noConflict();
   });
 })(jQuery);
 </script>
+<!-- jQuery Version 1.11.1 -->
+<!-- <script src="/js/jquery.js"></script> -->
 
+<!-- Bootstrap Core JavaScript -->
+<!-- <script src="/js/bootstrap.min.js"></script> -->
 </body>
 
 </html>
