--- a/views/ProductInfo.ejs
+++ b/views/ProductInfo.ejs
@@ -56,7 +56,7 @@
 
 
     <form action="/search" style = "margin-bottom : 50px;">
-        <input type="text" class="form-control" placeholder="Search" name="query">
+        <input type="text" class="form-control" placeholder="Search" name="query" style = "height: 75px;">
     </form>
 
 
