fix carousel picture

--- a/views/ProductInfo.ejs
+++ b/views/ProductInfo.ejs
@@ -20,8 +20,13 @@
         height: 350px;
         margin: auto;
     }
-    .carousel-control.left, .carousel-control.right {
-    background-image: none
+    .carousel-control.left{
+      background-image: none !important;
+
+    }
+    .carousel-control.right {
+      background-image: none !important;
+
     }
     </style>
     <!-- Bootstrap Core CSS -->
@@ -48,7 +53,7 @@
 
 <body>
     <div class="header-cont">
-    <h2 style="color: white" align = "center"><a href = "/search" style = "color: white">BBPriceOptimizer</a></p>
+    <h2 style="color: white" align = "center"><a href = "/search" style = "color: white">BBCPriceOptimizer</a></p>
     </div>
 
     <div class = "container-fluid">
@@ -62,6 +67,7 @@
 
 
     <!-- clicked product -->
+
 
 
     <div class="container">
@@ -124,6 +130,7 @@
 
 </div>
 </div>
+
 
 
     <select>
