add cards to search list

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -50,7 +50,7 @@
       <% for (var i = 0; i < productList.length; i++) { %>
           <div class = "rows">
         <div class = "columns">
-          <div  class="col-md-4">
+          <div  class="col-md-4" style="border: 1px solid #cccccc; padding-top: 20px;">
         <a href="/product/<%= productList[i].skuId %>">
 
           <ul class="list-group list-group-flush" style="list-style: none;">
