--- a/views/ProductInfo.ejs
+++ b/views/ProductInfo.ejs
@@ -53,7 +53,7 @@
 
 <body>
     <div class="header-cont">
-    <h2 style="color: white" align = "center"><a href = "/search" style = "color: white">BBCPriceOptimizer</a></p>
+    <h2 style="color: white" align = "center"><a href = "/search" style = "color: white">BBPriceOptimizer</a></p>
     </div>
 
     <div class = "container-fluid">
@@ -61,7 +61,7 @@
 
 
     <form action="/search" style = "margin-bottom : 50px;">
-        <input type="text" class="form-control" placeholder="Search" name="query" style = "height: 75px;">
+        <input type="text" class="form-control" placeholder="Search" name="query" style = "height: 75px; margin-top: 10px; font-size: 30px;">
     </form>
 
 
@@ -70,7 +70,7 @@
 
 
 
-    <div class="container">
+    <div class="container" style="border-radius: 4px; box-shadow: 0px 0px 4px #bababa">
       <h4 align="center"><%= title %></h4>
     <div class="row">
   <br>
@@ -130,28 +130,37 @@
 
 </div>
 </div>
-    <div id="city_graph" style="height: 400px; width: 400px; display: inline-block;">
-      <select id="city_select">
-        <option value="" disabled selected></option>
-        <option id="city_1" data="#myChart"></option>
-        <option id="city_2" data="#myChart2"></option>
-      </select>
+<div class='container' style="margin-bottom: 30px;">
+    <h3 style="margin-bottom: 40px;">Analytics</h3>
+    <div id="city_graph" style="height: 400px; width: 400px; display: inline-block; margin-bottom: 40px; margin-right: 30px;">
+      <div style="position: relative;">
+        <label for="city_select">City</label>
+        <select id="city_select" style="height: 28px; width: 150px; border-radius: 3px; margin-bottom: 10px;">
+          <option value="" disabled selected></option>
+          <option id="city_1" data="#myChart"></option>
+          <option id="city_2" data="#myChart2"></option>
+        </select>
+      </div>
       <canvas id="myChart" width="100" height="100" style="display: none;"></canvas>
       <canvas id="myChart2" width="100" height="100" style="display: none;"></canvas>
     </div>
-    <div id="age_graph" style="height: 400px; width: 400px; display: inline-block; margin-right: 30px;">
-      <select id="age_select">
-        <option value="" disabled selected></option>
-        <option id="age_0" data="#myChart3">0-20</option>
-        <option id="age_20" data="#myChart4">20-40</option>
-        <option id="age_40" data="#myChart5">40-60</option>
-        <option id="age_60" data="#myChart6">60-80</option>
-      </select>
+    <div id="age_graph" style="height: 400px; width: 400px; display: inline-block;">
+      <div style="position: relative;">
+        <label for="age_select">Age Range</label>
+        <select id="age_select" style="height: 28px; width: 150px; border-radius: 3px; margin-bottom: 10px;">
+          <option value="" disabled selected></option>
+          <option id="age_0" data="#myChart3">0-20</option>
+          <option id="age_20" data="#myChart4">20-40</option>
+          <option id="age_40" data="#myChart5">40-60</option>
+          <option id="age_60" data="#myChart6">60-80</option>
+        </select>
+      </div>
       <canvas id="myChart3" width="100" height="100" style="display: none;"></canvas>
       <canvas id="myChart4" width="100" height="100" style="display: none;"></canvas>
       <canvas id="myChart5" width="100" height="100" style="display: none;"></canvas>
       <canvas id="myChart6" width="100" height="100" style="display: none;"></canvas>
     </div>
+  </div>
     <!-- jQuery Version 1.11.1 -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
